[tool.poetry]
name = "skate"
version = "0.0.0"
description = "An HTTP asynchronous client."
authors = ["Manasses Lima <manasseslima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
